--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -34,6 +34,8 @@
     "next-intl": "^3.3.2",
     "pdf-parse-fork": "^1.2.0",
     "pdf2pic": "^3.2.0",
+    "playwright": "^1.54.2",
+    "puppeteer": "^24.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
